--- a/src/navigation/Navigation.css
+++ b/src/navigation/Navigation.css
@@ -7,6 +7,10 @@
   position: sticky;
   top: 0;
   background-color: var(--background);
+  z-index: 1;
+  box-shadow: 0 0 .5rem var(--primary);
+
+  margin-bottom: 2rem;
 
   ul {
     display: flex;
